--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
       "version": "0.1.0",
       "private": true,
       "dependencies": {
+            "@hookform/resolvers": "^5.2.2",
             "@radix-ui/react-accordion": "^1.2.3",
             "@radix-ui/react-alert-dialog": "^1.1.6",
             "@radix-ui/react-aspect-ratio": "^1.1.2",
@@ -40,13 +41,14 @@
             "react": "^18.3.1",
             "react-day-picker": "^8.10.1",
             "react-dom": "^18.3.1",
-            "react-hook-form": "^7.55.0",
+            "react-hook-form": "^7.71.1",
             "react-resizable-panels": "^2.1.7",
             "react-router-dom": "^7.13.0",
             "recharts": "^2.15.2",
             "sonner": "^2.0.3",
             "tailwind-merge": "*",
             "vaul": "^1.1.2",
+            "zod": "^4.3.6",
             "zustand": "^5.0.11"
       },
       "devDependencies": {
